--- a/aula08/src/main/resources/application.properties
+++ b/aula08/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 server.port=8888
 
-spring.datasource.url=jdbc:mysql://localhost:3307/aula_06
+spring.datasource.url=jdbc:mysql://localhost:3307/aula_08
 spring.datasource.username=root
-spring.datasource.password=aula_06
+spring.datasource.password=aula_08
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
